[package]
name = "cryptix-address-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
